--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <header>header</header>
+    <header>header
+        <nav>nav</nav>
+    </header>
     <body>body</body>
     <footer>footer</footer>
 </body>
